# agents_framework_sdk

./: .gitignore  README.es.md  README.md
.claude/: settings.json  settings.local.json
adk_financial_mcp_server/: .gitignore  readme.md  readme_es.md  requirements.txt  requirements_adk_django.txt  test_fundamental_analysis.py
azure_foundry_sharepoint/: .gitignore  (+4 more)
microsoft_agent_framework_app/: .env.example  .gitignore  README.es.md  README.md  pyproject.toml
microsoft_agent_framework_app/docs/: Building_an_Agent_Framework_App.pptx  guide_en.md  guide_en_extension.md  guide_es.md  guide_es_extension.md  technical_guide_en.md  technical_guide_es.md
microsoft_agent_framework_app/docs/superpowers/plans/: 2026-05-17-microsoft-agent-framework-app.md
microsoft_agent_framework_app/src/ms_agent_app/: __init__.py  agent_factory.py  cli.py  config.py  foundry_client.py  mcp_finance.py
microsoft_agent_framework_app/src/ms_agent_app/eval/: __init__.py  dataset.py  runner.py  score.py
microsoft_agent_framework_app/src/ms_agent_app/redteam/: __init__.py  dataset.py  run.py  target.py
microsoft_agent_framework_app/src/ms_agent_app/safety_engine/: README.md  __init__.py  compliance.py  providers.py  report.py  run.py  safety-trust.yml  stages.py
microsoft_agent_framework_app/src/ms_agent_app/safety_engine/docs/: Safety_and_Trust_Engine.pptx
microsoft_agent_framework_app/src/ms_agent_app/safety_engine/garak/: Dockerfile
microsoft_agent_framework_app/tests/: test_agent_factory.py  test_config.py  test_eval_runner.py  test_mcp_finance.py  test_redteam_target.py
(+120 files in other folders)
